--- a/ahpunjabfrontend/index.html
+++ b/ahpunjabfrontend/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/pwa-icon.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/pwa-icon.svg" /> -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="AH Punjab" />
 
     <!-- Mobile PWA Meta Tags -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="AH Punjab" />
 
     <!-- Theme Colors -->
-    <meta name="theme-color" content="#3B82F6" />
-    <meta name="msapplication-navbutton-color" content="#3B82F6" />
+    <meta name="theme-color" content="#E9BE28" />
+    <meta name="msapplication-navbutton-color" content="#E9BE28" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <!-- Prevent iOS Safari from showing address bar -->
@@ -25,7 +30,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/pwa-icon.svg" />
 
     <!-- Windows Tiles -->
-    <meta name="msapplication-TileColor" content="#3B82F6" />
+    <meta name="msapplication-TileColor" content="#E9BE28" />
     <meta name="msapplication-TileImage" content="/pwa-icon.svg" />
 
     <title>AH Punjab Reporting</title>
