--- a/ahpunjabfrontend/index.html
+++ b/ahpunjabfrontend/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/pwa-icon.svg" /> -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="AH Punjab" />
 
     <!-- Mobile PWA Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
@@ -26,12 +23,17 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" href="/pwa-icon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/pwa-icon.svg" />
 
     <!-- Windows Tiles -->
     <meta name="msapplication-TileColor" content="#E9BE28" />
     <meta name="msapplication-TileImage" content="/pwa-icon.svg" />
+
+    <!-- Google Fonts - Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <title>AH Punjab Reporting</title>
   </head>
